# chivastv-itesm-backend

./: .gitignore  README.md  diagrama.mmd  pyproject.toml
doc/: erd.md
src/: main.py
src/core/: user.py
src/db/: engine.py  models.py  script_params.py  scripts.py  session.py  setup.py
src/db/scripts/: DB.sql  DML.sql  categoria.sql  comentario.sql  equipo.sql  estadisticas_partido.sql  sesion.sql  trigger_mod_log.sql
src/db/scripts/ddl/: falta.sql  moderacion_log.sql  pago_premium.sql  permiso.sql  permiso_usuario.sql  procedures_definidos.sql  usuario.sql  video.sql
src/db/scripts/ddl/procedures/: crear_video.sql  eliminar_comentario.sql  insertar_comentario.sql  login_usuario.sql  obtener_comentarios_en_rango.sql  obtener_estadisticas.sql  obtener_video.sql  registrar_usuario.sql
src/db/scripts/dml/: simulacion_endpoints.sql
src/db/scripts/triggers/: trigger_mod_log.sql  trigger_update_usuario.sql  trigger_video_delete.sql
src/db/scripts/views/: views.sql
src/dependencies/: auth.py  resource.py
src/models/: response.py  token.py
src/routers/: __init__.py  comment.py  moderator.py  statistics.py  user.py  video.py
src/utils/: auth.py  config.py  types.py
